# HISOKA

./: localhost-key.pem
api/: .dockerignore  .env.example  .gitignore  README.md  azure-pipelines-test-ci.yml  azure-pipelines.yml  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
api/app/: main.py  models.py  schemas.py  security.py  settings.py
api/app/routers/: auth.py  users.py
api/migrations/: env.py
api/migrations/versions/: 52dd6f9418f9_create_user_table.py
api/tests/: conftest.py  test_auth.py  test_db.py  test_user.py
firmware/: .gitignore  README.md  async.py  configure_wifi.py  pyproject.toml  receiver
firmware/cpp/Sender/: platformio.ini
firmware/cpp/Sender/src/: ADCTimers.cpp  ADCTimers.h  DefaultNow.h  main.cpp
firmware/cpp/Sender/src/ADCReader/: ADCReader.cpp  ADCReader.h  Timer.cpp  Timer.h
firmware/cpp/Sender/src/now/master/: Master.cpp  Master.h
firmware/cpp/Sender/src/now/slave/: Slave.cpp  Slave.h
firmware/src/: boot.py  main.py
firmware/src/config/: files.py  led.py  receiver.py  serial_config.py  wifi_config.py
firmware/src/net/: ugit.py  update.py  wifi.py
firmware/src/primitives/: queue.py
firmware/src/radio/: espnow_comm.py  receiver.py  sender.py
firmware/teste_novo/: main.py
webapp/: .env.example  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  prettier.config.ts
webapp/--host/: nuxt.config.ts
webapp/assets/css/: main.css
webapp/assets/svg/: hisoka-board.svg.txt
webapp/certs/: localhost.pem
webapp/components/: BarChart.vue  LineChart.vue  Login.vue  NewLogin.vue  ProductCarrousel.vue  Register.vue  SensorChart.vue  Serial.vue  UserHeader.vue  hisoka-board.vue
webapp/i18n/locales/: br.json  en.json
webapp/middleware/: authenticated.ts
webapp/pages/: graphs.vue  index.vue  login.vue  register.vue
webapp/plugins/: api.ts  auth.client.ts
webapp/stores/: AuthUser.ts  sensor.ts
webapp/types/: api.d.ts
